Refactor: Improve deep link handling, logging, and update dependencies
This commit introduces several improvements:

1.  **Deep Link Handling & Logging in `MainActivity` and `Navigation`:**
    *   `MainActivity` now overrides `onNewIntent` to correctly handle incoming deep links when the activity is already running and logs the intent data to Crashlytics.
    *   Deep link logging in `Navigation.kt` is moved to a separate `LaunchedEffect` that observes changes to `activity?.intent?.data` to ensure it's logged when the intent is updated.
    *   Additional logging for the current navigation destination and `MainActivity.onCreate` intent data has been added to Crashlytics.

2.  **Notification Intent Flags:**
    *   In `NotificationUtils.kt`, the intent flags for notification PendingIntents (`notifyChallenges`, `notifyNewGame`, `notifySummary`) have been changed from `FLAG_ACTIVITY_CLEAR_TOP` or `FLAG_ACTIVITY_RESET_TASK_IF_NEEDED` to `FLAG_ACTIVITY_CLEAR_TASK`. This ensures that when a notification is tapped, the existing task is cleared and a new one is started, which helps with consistent deep link handling.

3.  **Crashlytics Logging:**
    *   Added Crashlytics logging for user actions in `MyGamesViewModel` and `GameViewModel`.
    *   Added logging in `CheckNotificationsTask` at the beginning of `doWork`.

4.  **Game Screen Lifecycle:**
    *   `GameUI.kt` now calls `viewModel.onResume()` when the lifecycle event is `ON_RESUME`.
    *   `GameViewModel` now handles `onResume` and `onPause` to manage a new `isInBackground` flag. The timer (`timerRefresher`) will now only run when the screen is not in the background.

5.  **Dependency Updates in `gradle/libs.versions.toml`:**
    *   `kotlin`: `2.2.0` -> `2.2.20`
    *   `androidGradlePlugin`: `8.12.0-rc01` -> `8.12.2`
    *   `navigationCompose`: `2.9.3` -> `2.9.4`
    *   `composeBom`: `2025.08.01` -> `2025.09.00`
    *   `koin`: `4.1.0` -> `4.1.1`
    *   `workManager`: `2.10.3` -> `2.10.4`
    *   `androidx-ac

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,28 +1,28 @@
 [versions]
 # Kotlin & Android
 datastorePreferences = "1.1.7"
-kotlin = "2.2.0"
-androidGradlePlugin = "8.12.0-rc01"
+kotlin = "2.2.20"
+androidGradlePlugin = "8.12.2"
 composeCompiler = "1.5.4"
 compileSdk = "36"
 minSdk = "21"
-navigationCompose = "2.9.3"
+navigationCompose = "2.9.4"
 targetSdk = "35"
 ndkVersion = "25.1.8937393"
 
 # Compose BOM
-composeBom = "2025.08.01"
+composeBom = "2025.09.00"
 
 # Main dependencies
-koin = "4.1.0"
+koin = "4.1.1"
 playServices = "21.4.0"
 accompanist = "0.36.0"
 room = "2.7.2"
 firebase = "33.16.0"
-workManager = "2.10.3"
+workManager = "2.10.4"
 androidx-core = "1.17.0"
 androidxCoreSplashscreen = "1.0.1"
-androidx-activity = "1.10.1"
+androidx-activity = "1.11.0"
 androidx-lifecycle = "2.9.3"
 material3 = "1.4.0-beta03"
 material = "1.13.0"
