Chore: Update splashscreen dependency
Updates the `androidxCoreSplashscreen` library from `1.0.1` to `1.2.0-rc01`.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,7 +21,7 @@ room = "2.7.2"
 firebase = "33.16.0"
 workManager = "2.10.4"
 androidx-core = "1.17.0"
-androidxCoreSplashscreen = "1.0.1"
+androidxCoreSplashscreen = "1.2.0-rc01"
 androidx-activity = "1.11.0"
 androidx-lifecycle = "2.9.3"
 material3 = "1.4.0-beta03"
