Feat: Add in-app review prompt
This commit integrates the Google Play In-App Review API, prompting users to rate the app after winning a game.

- **`ReviewPromptManager`** and **`ReviewPromptRepository`** are introduced to handle the review flow logic, timing, and state persistence using DataStore.
- The prompt is triggered from the `GameViewModel` after a player wins a game, subject to configurable timing and cooldown periods.
- Includes a fallback to redirect to the Play Store if the in-app review flow isn't available.
- New dependencies for Google Play Review (`com.google.android.play:review`) are added.
- A detailed documentation file, `REVIEW_PROMPT_INTEGRATION.md`, is included.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 # Kotlin & Android
 datastorePreferences = "1.1.7"
 kotlin = "2.2.20"
-androidGradlePlugin = "8.12.2"
+androidGradlePlugin = "8.13.0"
 composeCompiler = "1.5.4"
 compileSdk = "36"
 minSdk = "21"
@@ -49,6 +49,7 @@ espresso = "3.6.1"
 immutableCollections = "0.4.0"
 mpChart = "v3.1.0"
 persistentCookieJar = "v1.0.1"
+playReview = "2.0.2"
 
 # Testing
 junit = "4.13.2"
@@ -108,6 +109,7 @@ firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging
 # Google Play Services
 navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 play-services-auth = { group = "com.google.android.gms", name = "play-services-auth", version.ref = "playServices" }
+play-review = { group = "com.google.android.play", name = "review", version.ref = "playReview" }
 
 # Networking
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
